# OZMetaDB

./: .gitignore  README.md
api/: README.md  pyproject.toml
api/ozmetadb_api/: apply_engine.py  compiler_trigger.py  config.py  main.py  models.py  storage.py  wizard_runtime.py
cli/: ozmeta.py
compiler/: README.md  compile.py  ir.py
contracts/: ozmeta.cli.contract.json  ozmeta.cli.contract.md  ozmeta.exporter.contract.json  ozmeta.runtime.dsl.schema.json
docs/: 00-overview.md  01-naming-conventions.md  02-environments-and-slots.md  03-multi-cloud-compatibility.md  04-logging-and-audit.md  05-source-to-canonical-mapping.md  06-metadb-requirements.md  07-microsoft-integration-policy.md  08-ui-and-localization.md  09-enterprise-app-patterns.md  10-security-metadata.md  11-workflow-and-events.md  12-runtime-tracking.md  13-runtime-compiler-contracts.md  14-metadata-export-format.md  15-exporter-contract.md  16-roadmap-priorities.md  17-next-expansion-ui-lineage-sync-bi.md  18-localization-full-fidelity-export.md  19-ci-validation.md  20-ui-blueprint-console.md  21-nextjs-console-structure.md  22-identity-and-theming-patterns.md  23-console-wiring-plan.md  24-enums.md  25-documents-redaction.md  26-identity-resolution.md  27-dr-topology.md  28-graph-model.md  29-governance-consent-purpose-residency.md  30-reliability-outbox-inbox.md  31-performance-scalability.md  32-platform-service-map.md  40-exporter-contract-full-fidelity.md  41-testing-strategy.md  42-governance-implementation.md  43-cli-golden-manifest.md  50-control-plane-api.md  51-change-request-engine.md  (+4 more)
(+165 files in other folders)
