[project]
name = "ozmetadb-control-plane"
version = "0.1.0"
description = "OZMetaDB Control Plane API (snapshot + change requests + apply engine)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "jsonschema>=4.22",
  "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = ["ruff>=0.5.0", "pytest>=8.0.0"]
